--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
             app:destination="@id/SecondFragment" />
+        <action
+            android:id="@+id/action_to_timerFragment"
+            app:destination="@id/timerFragment" />
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
@@ -24,5 +27,13 @@
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
             app:destination="@id/FirstFragment" />
+        <action
+            android:id="@+id/action_to_timerFragment"
+            app:destination="@id/timerFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/timerFragment"
+        android:name="com.example.planktracker.TimerFragment"
+        android:label="@string/timer_text"
+        tools:layout="@layout/fragment_timer" />
 </navigation>
